added first sections

--- a/main.tex
+++ b/main.tex
@@ -43,6 +43,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % https://www.sharelatex.com/learn/Hyperlinks
 \usepackage{hyperref}
+\usepackage{amsmath}
 \hypersetup{
     colorlinks=true,
     linkcolor=blue,
@@ -59,13 +60,12 @@
 \include{./title}
 
 
-
-\def\creationyear{@YEAR}
+\def\creationyear{2024}
 \include{newyear}
 
-\def\creationmonth{@MONTH}
-\include{@YEAR/@YEAR_@MONTH}
-%\include{@YEAR/@YEAR_@MONTH}
+\def\creationmonth{March}
+\include{2024/2024_March}
+%\include{2024/2024_03}
 
 
 \end{document}
