--- a/title.tex
+++ b/title.tex
@@ -6,18 +6,17 @@
     \vspace*{0.4\textheight}
 
 	\Huge
-	\bf{@TITLE}
+	\bf{Neural Control Variates}
     
 	\Large
-	\it{Srijit Paul}
+	\it{Srijit Paul, Hyunwoo Oh and Paulo Bedaque}
 
         \vspace*{0.4\textheight}
         \large
-        {@LOCATION}
+        {College Park}
         
         \large
-        {@CREATIONDATE}
-        \monthdayyeardate\today
+        {2024-03-25}
 	
     \normalsize
     
