--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
- \documentclass[12pt, a4paper, draft]{article}
+ \documentclass[12pt, a4paper]{article}
 
 \def\arcdeg{\hbox{$^\circ$}}
 \def\arcmin{\hbox{$^\prime$}}
