Control variate definition

--- a/main.tex
+++ b/main.tex
@@ -41,9 +41,16 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % For Links to Websites
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% https://www.sharelatex.com/learn/Hyperlinks
+% https://www.sharelatexS7p49337.com/learn/Hyperlinks
 \usepackage{hyperref}
 \usepackage{amsmath}
+\usepackage{braket}
+\usepackage{amssymb}
+\usepackage{amsfonts}
+\usepackage{amsthm}
+\usepackage{graphicx}
+\usepackage{subcaption}
+\usepackage{float}
 \hypersetup{
     colorlinks=true,
     linkcolor=blue,
