--- a/2024/2024_March.tex
+++ b/2024/2024_March.tex
@@ -4,7 +4,7 @@
 
 %\def\day{\textit{\monthdayyeardate\today}}
 %\def\weekday{\textit{Tuesday}}
-\subsection*{\monthdayyeardate\today}
+\subsection*{March 25, 2024}
 Following the idea proposed in $2312.08228$. 
 \subsubsection*{U(1) Model Application}
 \begin{itemize}
@@ -24,7 +24,7 @@ The Action in the U(1) model is a sum of cosine of the angle of the plaquettes, 
 Can we show that the plaquette picture is equivalent to the link picture in the Haar measure when we compute the partition function?
 
 \textbf{Solution:}
-The Haar measure is invariant under the transformation of the link variables. If we choose a gauge where all link variables pointing along the time direction are rotated to the unit element which means \textbf{[Temporal Gauge]} $$\theta^{\mu=0}_{\text{i,j,\,, link}} = 0 \,\,\,\forall\,\,\text{i, j}\in[1, L]$$
+The Haar measure is invariant under the transformation of the link variables. If we choose a gauge where all link variables pointing along the time direction are rotated to the unit element which means \textbf{[Temporal Gauge]} $$\theta^{\mu=0}_{\text{i,j,\, link}} = 0 \,\,\,\forall\,\,\text{i, j}\in[1, L]$$
 Then the link action becomes
 \begin{equation}
     S_{\text{link}}^{2D} = \beta(L^2- \sum_{\text{j}=1}^{L}\sum_{\text{i}=1}^{L}\cos(\theta_{\text{i,j, \,link}}^{\mu=1}-\theta_{\text{i+1,j, \,link}}^{\mu=1}))
