--- a/2024/2024_March.tex
+++ b/2024/2024_March.tex
@@ -4,7 +4,7 @@
 
 %\def\day{\textit{\monthdayyeardate\today}}
 %\def\weekday{\textit{Tuesday}}
-\subsection*{\monthdayyeardate\today}
+
 Following the idea proposed in $2312.08228$. 
 \subsubsection*{U(1) Model Application}
 \begin{itemize}
@@ -35,22 +35,28 @@ Now we can see that the link action is equivalent to the plaquette action in the
 \end{equation}
 and we perform a change of variables such that $\theta_{\text{i,j, \,link}}^{\mu=1}  - \theta_{\text{i+1,j, \,link}}^{\mu=1}= \theta^{'}_{\text{i,j}}$ then we can see that the partition function is equivalent to the plaquette action in the Haar measure.
 
-\subsubsection*{Control Variate}
-Using Stein Operator to construct a Neural Network to approximate a function $g(\theta^{\mu}_{\text{i,j}})$ such that
-\begin{equation}
-    \nabla_{\theta^{\mu}_{\text{i,j}}}g(\theta^{\mu}_{\text{i,j}}) = g(\theta^{\mu}_{\text{i,j}})\nabla_{\theta^{\mu}_{\text{i,j}}}S_{\text{link}}^{2D}
-\end{equation}
-The Control Variate $f(\theta^{\mu}_{\text{i,j}})$ is then defined as
-\begin{equation}
-    f(\theta^{\mu}_{\text{i,j}}) =
-    \nabla_{\theta^{\mu}_{\text{i,j}}}g(\theta^{\mu}_{\text{i,j}}) - g(\theta^{\mu}_{\text{i,j}})\nabla_{\theta^{\mu}_{\text{i,j}}}S_{\text{link}}^{2D}
-\end{equation}
-By Schwinger-Dyson equation, we can show that the expectation value of the Control Variate is zero.
-
-Now if we define a gauge invariant observable $O$ as
-    \begin{equation}
-        \braket{O} = \frac{1}{Z}\sum_{\text{a}=1}^{N}O([\theta^{\mu}_{\text{i,j}}]_a)e^{-S_{\text{link}}^{2D}[{\theta^{\mu}_{\text{i,j}}}]_a}
-    \end{equation}
-\begin{itemize}
-    \item 
-\end{itemize}
+% \subsubsection*{Control Variate}
+% Using Stein Operator to construct a Neural Network to approximate a function $g(\theta^{\mu}_{\text{i,j}})$ such that
+% \begin{equation}
+%     \nabla_{\theta^{\mu}_{\text{i,j}}}g(\theta^{\mu}_{\text{i,j}}) = g(\theta^{\mu}_{\text{i,j}})\nabla_{\theta^{\mu}_{\text{i,j}}}S_{\text{link}}^{2D}
+% \end{equation}
+% The Control Variate $f(\theta^{\mu}_{\text{i,j}})$ is then defined as
+% \begin{equation}
+%     f(\theta^{\mu}_{\text{i,j}}) =
+%     \nabla_{\theta^{\mu}_{\text{i,j}}}g(\theta^{\mu}_{\text{i,j}}) - g(\theta^{\mu}_{\text{i,j}})\nabla_{\theta^{\mu}_{\text{i,j}}}S_{\text{link}}^{2D}
+% \end{equation}
+% By Schwinger-Dyson equation, we can show that the expectation value of the Control Variate in infite statistics limit is zero.
+% \begin{equation}
+%     \braket{f(\theta^{\mu}_{\text{i,j}})}_{\infty} = 0
+% \end{equation}
+% Now if we define a gauge invariant observable $O$ as
+%     \begin{equation}
+%         \braket{O}_F = \frac{1}{Z}\sum_{\text{a}=1}^{N}O([\theta^{\mu}_{\text{i,j}}]_a)e^{-S_{\text{link}}^{2D}[{\theta^{\mu}_{\text{i,j}}}]_a}
+%     \end{equation}
+% As $N\rightarrow\infty$ \begin{equation}
+%     \braket{O}_F \rightarrow \braket{O}_\infty
+% \end{equation}
+% such that,
+% \begin{equation}
+%     \braket{O}_F-\sqrt{\braket{O^2}_F - \braket{O}_F^2}\leq \braket{O}_\infty \leq \braket{O}_F+\sqrt{\braket{O^2}_F - \braket{O}_F^2} 
+% \end{equation}
