--- a/main.tex
+++ b/main.tex
@@ -75,6 +75,8 @@
 \def\creationmonth{April}
 \include{2024/2024_April}
 %\include{2024/2024_03}
+\def\creationmonth{August}
+\include{2024/2024_August}
 
 
 \end{document}
