--- a/2024/2024_March.tex
+++ b/2024/2024_March.tex
@@ -22,12 +22,12 @@ The Action in the U(1) model is a sum of cosine of the angle of the plaquettes, 
 Can we show that the plaquette picture is equivalent to the link picture in the Haar measure when we compute the partition function?
 
 \textbf{Solution:}
-The Haar measure is invariant under the transformation of the link variables. If we choose a gauge where all link variables pointing along the time direction are rotated to the unit element ($e^{i \theta}= 1\,\implies \theta=0$) which means in \textbf{[Temporal Gauge]} $$\theta^{\mu=0}_{\text{i,j,\, link}} = 0 \,\,\,\forall\,\,\text{i, j}\in[1, L]$$
+The Haar measure is invariant under the transformation of the link variables. If we choose a gauge where all link variables pointing along the time direction are rotated to the unit element ($e^{i \theta}= 1\,\implies \theta=0$) which means in \textbf{[Maximal Gauge]} $$\theta^{\mu=0}_{\text{i,j,\, link}} = 0 \,\,\,\forall\,\,\text{i, j}\in[1, L]$$
 Then the link action becomes
 \begin{equation}
     S_{\text{link, temporal}}^{2D} = \beta(L^2- \sum_{\text{j}=1}^{L}\sum_{\text{i}=1}^{L}\cos(\theta_{\text{i,j, \,link}}^{\mu=1}-\theta_{\text{i+1,j, \,link}}^{\mu=1}))
 \end{equation}
-Now we can see that the link action is equivalent to the plaquette action in the Haar measure. If we compute the partition function using the link action in the temporal gauge as
+Now we can see that the link action is equivalent to the plaquette action in the Haar measure. If we compute the partition function using the link action in the Maximal gauge as
 \begin{equation}
     Z^{2D}_{\text{link}} = \int \prod_{\text{i}=1}^{L}\prod_{\text{j}=1}^{L}d\theta_{\text{i,j, \,link}}^{\mu=1}e^{-S_{\text{link, temporal}}^{2D}}
 \end{equation}
